--- a/front-end/src/app/pages/infor/infor.page.html
+++ b/front-end/src/app/pages/infor/infor.page.html
@@ -10,12 +10,11 @@ class="ion-no-border"
      
      <ion-item>
         <ion-select
-          fill="outline"
+          fill="none"
           justify="space-between"
           label="Select Gym"
           aria-label="Gym_Choice"
-          placeholder="Select Gym"
-          
+          placeholder="Select Gym"          
           (ionChange)="selecthandleChange($event)"
           [compareWith]="compareWith" value="{{MyDefaultGymValue}}"              
           slot="end"
@@ -102,13 +101,12 @@ class="ion-no-border"
   <div class="div-0">
     <ion-label color="dark"><h2><strong>Gym Setup ...under development..</strong></h2></ion-label>
     <ion-list>
-          <ion-item>
-            <ion-label color="dark"> <h2 >Add More Gym </h2> </ion-label>
-            <ion-icon (click)="addmoregym()" slot="end" name="chevron-forward-outline"></ion-icon>
+          <ion-item detail="true" (click)="addmoregym()" >
+            <ion-label color="dark"> <h2 >Add More Gym. </h2> </ion-label>
           </ion-item>
 
-          <ion-item >      
-            <ion-label color="dark"><h2>Set Gym Capacity ..</h2></ion-label>
+          <ion-item detail="true">      
+            <ion-label color="dark"><h2>Remove Gym.</h2></ion-label>
           </ion-item>
 
           <!-- <ion-item> 
