--- a/front-end/src/app/pages/member-action/member-action.page.html
+++ b/front-end/src/app/pages/member-action/member-action.page.html
@@ -13,20 +13,13 @@
   </ion-header>
 
   <ion-content class="ion-padding">
+    <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+      <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
 
       <div class="div-0">
         <ion-button (click)="isscheduleNotification()">Scheduled Notification </ion-button>
-          <!-- <ion-card class="ion-text-center">
-            <ion-card-content>
-              <ion-datetime-button datetime="datetime" displayFormat="MMM DD, YYYY HH:mm" ></ion-datetime-button>
-              <ion-modal [keepContentsMounted]="true">
-                <ng-template>
-                  <ion-datetime id="datetime"></ion-datetime>
-                </ng-template>
-              </ion-modal>
-            </ion-card-content>
-          </ion-card> -->
-      </div>
+            </div>
 
      
 
@@ -44,13 +37,13 @@
       </div>
 
       <div class="div-0">
-        <ion-label color="dark"><strong><h2>My Account</h2></strong></ion-label>
+        <ion-label color="dark"><strong><h2><strong>My Account</strong></h2></strong></ion-label>
         <ion-grid [fixed]="true">
           <ion-row>
             <ion-col> 
               <ion-list  [inset]="true" lines="none">
                 <ion-item>
-                  <ion-label color="dark"><h2>Allowed Days</h2> </ion-label>                   
+                  <ion-label color="dark"><h2><strong>Allowed Days</strong></h2> </ion-label>                   
                 </ion-item>
               <ion-item>
                 <ion-label color="dark"><h2 [ngClass]="daysLeft < 0 ? 'red' : 'green'">Days Left : {{daysLeft}} Day(s)</h2> </ion-label>                   
@@ -59,17 +52,13 @@
               <ion-item>
                 <ion-label color="dark"><h2>Last Date :{{lastDate | date}}</h2> </ion-label>                   
               </ion-item>
-
-              <!-- <ion-item>
-                <ion-label color="dark"><h2>Locker ID ...</h2> </ion-label>                   
-              </ion-item> -->
             </ion-list>
           </ion-col>
 
             <ion-col>
               <ion-list [inset]="true" lines="none">
                 <ion-item>
-                  <ion-label color="dark"><h2>Allowed Time</h2> </ion-label>                   
+                  <ion-label color="dark"><h2><strong>Allowed Time</strong></h2> </ion-label>                   
                 </ion-item>
 
                 <ion-item>
@@ -83,13 +72,7 @@
               </ion-list>
             </ion-col>
           </ion-row>
-        </ion-grid>
-
-        <!-- <ion-item class="ion-text-center">
-          <ion-label color="dark"><h2>Recharge Request</h2> </ion-label>                   
-        </ion-item> -->
-        
-       
+        </ion-grid>  
       </div>
   </ion-content>
 
