--- a/front-end/src/app/pages/infor/infor.page.html
+++ b/front-end/src/app/pages/infor/infor.page.html
@@ -38,8 +38,7 @@ class="ion-no-border"
   <div class="div-0">
     <ion-label color="dark"> <h2><strong>Report</strong></h2> </ion-label>   
       <ion-item >        
-        <ion-list>
-          
+        <ion-list>          
             <ion-item>
               <ion-label color="dark"><h2>Total Members :- {{totalMembers}} Persons</h2> </ion-label>
             </ion-item> 
@@ -56,10 +55,8 @@ class="ion-no-border"
               <ion-label color="dark"><h2>Validity Going to End :- {{goingtoExpire}} Persons</h2></ion-label>
             </ion-item> 
           
-            <ion-item> 
-              
-              <ion-toggle justify="space-between" aria-label="primary" color="primary" [checked]="true">Set Reminder(7 days)</ion-toggle>
-               
+            <ion-item>               
+              <ion-toggle justify="space-between" aria-label="primary" color="primary" [checked]="true">Set Reminder(7 days)</ion-toggle>               
             </ion-item>
           
           
@@ -85,14 +82,13 @@ class="ion-no-border"
               (ionChange)="lockIdToggle($event)">Update Lock ID?</ion-toggle>
         </ion-item>
 
-        <ion-item>
+        <ion-item detail="true" (click)="gymUpdate()">
           <ion-label color="dark"><h2>Update Gym Details</h2> </ion-label>
-          <ion-icon (click)="gymUpdate()" slot="end" name="chevron-forward-outline"></ion-icon>
+           
         </ion-item>
 
-        <ion-item >
+        <ion-item detail="true" (click)="QrCodeDownLoad()">
             <ion-label color="dark" ><h2>Download QR code </h2></ion-label>
-            <ion-icon (click)="QrCodeDownLoad()" slot="end" name="chevron-forward-outline"></ion-icon>
         </ion-item>
 
       </ion-list>  
@@ -105,7 +101,7 @@ class="ion-no-border"
             <ion-label color="dark"> <h2 >Add More Gym. </h2> </ion-label>
           </ion-item>
 
-          <ion-item detail="true">      
+          <ion-item detail="true" (click)="removeGym()">      
             <ion-label color="dark"><h2>Remove Gym.</h2></ion-label>
           </ion-item>
 
