--- a/front-end/src/app/pages/member-details/member-details.page.html
+++ b/front-end/src/app/pages/member-details/member-details.page.html
@@ -23,14 +23,12 @@
 
   <ion-list lines="none" [inset]="true">
     <ion-list-header>
-      <!-- <ion-icon name="person-circle-outline"></ion-icon> -->
-      <ion-label class="ion-padding">{{member.m_name}}</ion-label>
-      
+         <ion-label class="ion-padding"><h2><strong>{{member.m_name | titlecase }}</strong></h2></ion-label>
     </ion-list-header>
+
     <ion-item>
       <ion-icon name="call-outline"></ion-icon>
-      <ion-label class="ion-padding">Mobile No.: - {{member.mobile}}</ion-label>
-      
+      <ion-label class="ion-padding">Mobile No.: - {{member.mobile}}</ion-label>      
     </ion-item>
     <ion-item>
       <ion-icon name="mail-open-outline"></ion-icon>
