--- a/front-end/src/app/pages/forgetpassword/forgetpassword.page.html
+++ b/front-end/src/app/pages/forgetpassword/forgetpassword.page.html
@@ -1,92 +1,91 @@
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>Forget Password ? </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content [fullscreen]="true">
 
-<ion-content>
-<div>
-  <form *ngIf="!isOTPmailed" [formGroup]="authForm" (ngSubmit)="getOTP()">
-    <ion-list>
-    <ion-item>
-      
-      <ion-input labelPlacement="floating" label="Email ID" formControlName="email" type="email" required></ion-input>
-    </ion-item>
-
-    <ion-item>
-       
-      <ion-input labelPlacement="floating" label="Mobile" formControlName="mobile" type="text" required>
-      </ion-input>
-    </ion-item>
-
-    <div>
-        <ion-button 
-        type="submit" 
-        [disabled]="!authForm.valid"
-        color="primary" 
-        shape="full" 
-        expand="block">Get Verification Code</ion-button>
-    </div>
-  </ion-list>
-</form>
-</div>
-
-<div>
-<form *ngIf="isOTPmailed" [formGroup]="resetForm" (ngSubmit)="resetPassword()">
-  <ion-list>
-  <ion-item>
-    
-    <ion-input 
-    labelPlacement="floating" 
-    label="Email ID" 
-    formControlName="email" 
-    type="email" 
-    required
-    placeholder="Enter Email ID" ></ion-input>
-  </ion-item>
-
-  <ion-item>
-       <ion-input 
-       labelPlacement="floating" 
-       label="OTP" 
-       formControlName="otp" 
-       type="text" 
-       required
-       placeholder="OTP sent to registered Email ID">
-    </ion-input>
-  </ion-item>
-
-  <ion-item>
-     <ion-input 
-     labelPlacement="floating" 
-     label="New Password" 
-     formControlName="newPassword" 
-     type="text" 
-     required
-     placeholder="Enter New Password ">
-    </ion-input>
-  </ion-item>
-
-  <div>
-      <ion-button 
-      type="submit" 
-      [disabled]="!resetForm.valid"
-      color="primary" 
-      shape="full" 
-      expand="block">Change Password</ion-button>
+  <div id="bg">
+    <ion-fab vertical="bottom" edge horizontal="center" slot="fixed">
+      <ion-fab-button color="white" routerLink="/login">
+        <img src="assets/svg/folded_hand.svg">
+        <!-- <ion-icon name="close-outline" color="medium"></ion-icon> -->
+      </ion-fab-button>
+    </ion-fab>
   </div>
-</ion-list>
-</form>
-</div>
+ 
+  <div >
+    <form  *ngIf="!isOTPmailed" [formGroup]="authForm" (ngSubmit)="getOTP()">
+      <ion-list lines="none" class="ion-margin">
+        <ion-item class="item-has-focus ion-touched ion-valid" class="ion-margin">
 
-<p class="ion-text-right">Back to <strong routerLink="/login">login</strong></p>
+          <ion-input labelPlacement="floating" label="Email ID" formControlName="email" type="email"
+            required></ion-input>
+        </ion-item>
 
-  <div *ngIf = "serverErrorMessage">
+        <ion-item class="item-has-focus ion-touched ion-valid" class="ion-margin">
+          <ion-input labelPlacement="floating" label="Mobile" formControlName="mobile" type="text" required>
+          </ion-input>
+        </ion-item>
+
+        <div>
+          <ion-button 
+          type="submit" 
+          [disabled]="!authForm.valid" 
+          color="primary" 
+          shape="round" 
+          expand="block">Get
+            Verification Code</ion-button>
+        </div>
+      </ion-list>
+    </form>
+  </div>
+
+  <div >
+    <form *ngIf="isOTPmailed" [formGroup]="resetForm" (ngSubmit)="resetPassword()">
+      <ion-list lines="none" class="ion-margin">
+        <ion-item class="item-has-focus ion-touched ion-valid" class="ion-margin">
+
+          <ion-input labelPlacement="floating" label="Email ID" formControlName="email" type="email" required
+            placeholder="Enter Email ID"></ion-input>
+        </ion-item>
+
+        <ion-item class="item-has-focus ion-touched ion-valid" class="ion-margin">
+          <ion-input 
+          labelPlacement="floating" 
+          label="OTP" 
+          formControlName="otp" 
+          type="text" required
+          placeholder="XXXXXX">
+          </ion-input>
+        </ion-item>
+
+        <ion-item class="item-has-focus ion-touched ion-valid" class="ion-margin">
+          <ion-input labelPlacement="floating" label="New Password" formControlName="newPassword" type="text" required
+            placeholder="Enter New Password ">
+          </ion-input>
+        </ion-item>
+
+        <div>
+          <ion-button 
+          type="submit" 
+          [disabled]="!resetForm.valid" 
+          color="primary" 
+          shape="round" 
+          strong="true"
+          expand="block">
+          Change
+            Password</ion-button>
+        </div>
+      </ion-list>
+    </form>
+    <div *ngIf="isOTPmailed" align="right">
+      <ion-label class=" ion-text-center">OTP sent to Email ID Please get it From There </ion-label>
+    </div>
+  </div>
+
+  <ion-text color="medium">  <p class="ion-margin-horizontal"> <strong routerLink="/login"><ion-icon name="chevron-back"></ion-icon> Back to login</strong></p></ion-text>
+
+  
+  <div *ngIf="serverErrorMessage" align="right">
     {{serverErrorMessage}}
   </div>
 
-  <div *ngIf = "isOTPmailed">
-    <ion-label class=" ion-text-center">OTP sent to Email ID Please get it From There </ion-label>
-  </div>
+  
 
 </ion-content>
