--- a/front-end/src/app/pages/login/login.page.html
+++ b/front-end/src/app/pages/login/login.page.html
@@ -29,7 +29,21 @@
      </ion-input>
    </ion-item>
 
-    <ion-text color="medium"><p class="ion-margin-horizontal"> <strong routerLink="/forgetpassword"> Forgot Password ?</strong></p></ion-text>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm="5"><ion-text color="medium">
+          <p class="ion-margin-horizontal"> <strong routerLink="/forgetpassword"> Forgot Password ?</strong></p>
+        </ion-text>
+      </ion-col>
+      <ion-col size-sm="5"><ion-text color="medium">
+          <p class="ion-margin-horizontal"> <strong routerLink="/register"> New User?</strong></p>
+        </ion-text>
+      </ion-col>
+  
+    </ion-row>
+  </ion-grid>
+   
+  
 
     <div align="right">
       <!-- <ion-button shape="round" strong="true" class="ion-margin-end" color="plant">
