--- a/front-end/src/app/pages/member-list/member-list.page.scss
+++ b/front-end/src/app/pages/member-list/member-list.page.scss
@@ -318,3 +318,22 @@ ion-modal{
 }
   }
 }
+
+.ion-fab-1 {
+  ion-icon {
+      font-size: 2.5rem;
+  }
+}
+
+  .ion-fab-2 {
+    
+   margin :25px;
+    ion-fab-button {
+      margin-bottom: 25px;
+      ion-icon {
+        font-size: 2.5rem;
+    }
+}
+    
+  }
+
