banner added at meaction

--- a/front-end/src/app/pages/member-action/member-action.page.html
+++ b/front-end/src/app/pages/member-action/member-action.page.html
@@ -18,8 +18,9 @@
     </ion-refresher>
 
       <div class="div-0">
+        <app-banner [slides]="slides"></app-banner>
         <ion-button (click)="isscheduleNotification()">Scheduled Notification </ion-button>
-            </div>
+      </div>
 
      
 
