--- a/front-end/src/app/pages/member-list/member-list.page.html
+++ b/front-end/src/app/pages/member-list/member-list.page.html
@@ -1,7 +1,6 @@
   <ion-header>
    
-    <ion-item>
-      
+    <ion-item>      
       <ion-select 
         aria-label="Gym"
         placeholder="Select Gym"      
@@ -27,9 +26,9 @@
 <ion-content class="ion-padding" >
   <!-- [ngStyle]="{ background-image: background_image }" -->
   <!-- [ngStyle]="{'background-image': 'url(' + background_image + ')'}" -->
-  <div [ngStyle]="{'background-image': ' url(' + imageUrl  + ') no-repeat 0 0'}" >
-<!-- was tryng to set Backgrund image but not success -->
-  </div>
+  <!-- <div [ngStyle]="{'background-image': ' url(' + imageUrl  + ') no-repeat 0 0'}" >
+<!-- was tryng to set Backgrund image but not success --
+  </div> -->
   
   <div>
     <app-banner [slides]="members_slides"></app-banner>
@@ -48,209 +47,44 @@
 
        <ion-list lines="none" *ngFor="let m of members " lines="">
         <ion-div *ngIf="searchText ===''|| m.m_name.toLowerCase().includes(searchText) || m.mobile.toLowerCase().includes(searchText) || m.m_enddate.toLowerCase().includes(searchText)|| m.email.toLowerCase().includes(searchText)">
-          <ion-grid>
-            <ion-row>
-              <ion-col size="10">              
-                <ion-item >  
-                  <div class="avatar" (click)="attenRecord(m._id,$event)" id="open-modal"> {{getInitials(m.m_name)}}</div>            
-                  <ion-modal #modal trigger="open-modal" mode="md">
-                    <ng-template>
-                      <ion-content>
-                        <ion-datetime
-                        locale="en-IN"
-                        [min]="start_Date"
-                        [max]="end_Date"
-                        presentation="date"
-                        #dateValue
-                        size="cover"
-                        [highlightedDates]="highlightedDates"
-                        (ionChange)="dateTouched(dateValue.value)"                         
-                        (ionCancel)="isModalOpen = false;"            
-                        >
-                        <span slot="title">{{m.m_name}} Attended Days</span>
-                      <ion-buttons slot="buttons">
-                        <ion-button (click)="close()" color="primary" ><strong>Dismiss</strong></ion-button>
-                      </ion-buttons>
-                      
-                      </ion-datetime>
-
-                      </ion-content>
-                    </ng-template>
-                   </ion-modal>
-                  
-                <ion-row></ion-row>
-                  <!-- <ion-badge>{{m.memberType}}</ion-badge>  -->
-                <ion-list>
+                   
+               <ion-item-group>           
+                <ion-item class="ion-padding-vertical popItem">
+                  <ion-thumbnail>
+                  <div class="avatar" (click)="seeAttendance(m._id)"> 
+                    <ion-text color="white">{{getInitials(m.m_name)}}</ion-text>
+                  </div>      
+                 </ion-thumbnail>  
                   <ion-label>
-                  <h3><strong>{{m.m_name}}</strong></h3>
-                  <ion-badge>{{m.memberType}}</ion-badge> 
-                  <p (click)="CallTel(m.mobile)"><ion-icon name="call"></ion-icon>{{m.mobile}}</p>                  
-                  <p><ion-icon name="calendar"></ion-icon> Last Date:{{m.m_enddate | date }}</p>
-                </ion-label>
-                </ion-list>                
-              </ion-item>
-            </ion-col>
+                    <ion-note color="dark"><b>{{m.m_name | titlecase}}</b></ion-note>
+                      <p class="ion-text-wrap"><ion-badge>{{m.memberType}}</ion-badge></p>
+                      <p>
+                        <ion-text color="dark" (click)="CallTel(m.mobile)"><ion-icon name="call"></ion-icon>{{m.mobile}}</ion-text>
+                        <ion-text color="dark"><br> <ion-icon name="calendar"></ion-icon> Last Date:{{m.m_enddate | date }}</ion-text>
+                      </p>                  
+                  </ion-label> 
+                  <ion-fab vertical="top" horizontal="end">
+                    <ion-fab-button debounceTime="700" (click)="presentModal(m._id)" size="small" color="secondary">
+                      <img [src]=""/>
+                    </ion-fab-button>
+                  </ion-fab> 
+                  
+                     </ion-item>          
 
-            <ion-col debounceTime="700" (click)="presentModal(m._id)" size="1" [ngClass]="+m.m_enddate < today_ ? 'div-vertical-red' : 'div-vertical-green'">
+            <!-- <ion-col debounceTime="700" (click)="presentModal(m._id)" size="1" [ngClass]="+m.m_enddate < today_ ? 'div-vertical-red' : 'div-vertical-green'">
               <!-- <ion-div [ngClass]="m.m_enddate < today_ ? 'div-vertical-red' : 'div-vertical-green'">
-              </ion-div> -->
-            </ion-col>
-
-            </ion-row>
+              </ion-div> --
+            </ion-col> -->             
             <ion-button class="button-round" *ngIf="m.isInviteAccepted === 'Yes'" [disabled]="isButtonSubmit" color="primary" shape="round" fill="outline" expand="block" (click)="updateMemberControl(m._id)" 
             (click)="deleteCodeIfacceptedOrExpired(m.email,true)"><ion-icon name="create"></ion-icon>Validity</ion-button>
             <ion-button *ngIf="m.isInviteAccepted === 'Not'" [disabled]="isButtonSubmit" color="primary" shape="round" fill="outline" expand="block" (click)="inviteMember(m._id)"><ion-icon name="create"></ion-icon>Invite</ion-button>
             <ion-button *ngIf="m.isInviteAccepted === 'Pending'" [disabled]="isButtonSubmit" color="success" shape="round" fill="outline" expand="block" (click)="inviteMember(m._id)" (click)="deleteCodeIfacceptedOrExpired(m.email,false)"><ion-icon name="create"></ion-icon>Invited</ion-button>
-  
-          </ion-grid>
-         
-        
-      </ion-div>
-       </ion-list>
+          
+           
+            </ion-item-group>
+       </ion-div>
+     </ion-list>
 
-       
-
-       
-
-            
-     
-
-  
-      <!-- <ion-card class="ion-margin"         
-      *ngFor="let m of members">
-              <ion-card-header appSwipe
-              (swipe)="onSwipe(m._id,$event)"
-              SWIPE GESTURE>                          
-                <ion-card-title>
-                  <ion-item>
-                    <ion-icon slot="start" name="chevron-forward-outline" (click)="inviteMember(m._id)"></ion-icon>
-                    <ion-avatar slot="start">
-                      <ion-img src="https://i.pravatar.cc/300?u=b"></ion-img>
-                    </ion-avatar>
-
-
-                    <ion-label>
-                      <h2>{{m.m_name}}</h2>                      
-                      <ion-badge>{{m.memberType}}</ion-badge>                       
-                      <p (click)="CallTel(m.mobile)"><ion-icon name="call"></ion-icon>{{m.mobile}}</p>
-                      <!-- presentModal --
-                      
-                    </ion-label>
-                    
-                    <ion-icon slot="end"  name="chevron-back-outline" (click)="updateMember(m._id)"></ion-icon>
-                  </ion-item>
-                       
-                </ion-card-title>
-                <ion-card-subtitle>
-                   <ion-grid>
-                      <ion-row>
-                        <!-- <ion-col>Balance :{{m.m_validdays}} Day(s)</ion-col> --
-                        <ion-col>End Date:{{m.m_enddate | date }}</ion-col>
-                        <ion-col>Start Time:{{m.m_intime | date:'shortTime' }}</ion-col>
-                        <ion-col>Finish Time:{{m.m_outtime | date:'shortTime' }}</ion-col>
-                      </ion-row>
-                    </ion-grid>                       
-                </ion-card-subtitle>
-              </ion-card-header>
-            
-              <!-- <ion-card-content>
-                 <!-- <p>Balance Days {{m.m_validdays}} </p> --> 
-                <!-- <div>     
-                </div> -->
-                
-                 <!-- <p>unique ID {{m._id}} </p>  -->
-                 <!-- <p>
-                  <ion-button (click)="rangeValue(m.m_enddate,m.m_validdays)"> 
-                    value
-                  </ion-button>
-                 </p> -->
-
-                 <!-- <a [routerLink]="['/member/', m._id]">{{ m._id }}</a>
-              </ion-card-content> 
-              <!-- <ion-item>
-                <ion-range aria-label="Custom range" [value]={rangeValue} [pin]="true"></ion-range>
-              </ion-item>  --
-
-              <ion-grid>
-                <ion-row>
-                  <ion-col><ion-button [disabled]="isButtonSubmit" color="primary" shape="round" fill="outline" expand="block" (click)="updateMemberControl(m._id)"><ion-icon name="create"></ion-icon>Validity</ion-button>
-                  </ion-col>
-                  <!-- <ion-col><ion-button color="primary" expand="block" (click)="updateMember(m._id)"><ion-icon name="documents"></ion-icon>Detail</ion-button></ion-col> -->
-                  <!-- <ion-col><ion-button color="primary" expand="block" (click)="inviteMember(m._id)"><ion-icon name="send"></ion-icon>Invite</ion-button></ion-col> --
-                </ion-row>
-              </ion-grid>
-              
-                     
-    </ion-card> -->
-    
-
-    <!-- <ion-button
-    class="ion-margin" 
-    expand="block"
-    appGesture
-    [gestureOpts]="[{name: 'tap'}]"
-    (tap)="onTap($event)">
-    TAP GESTURE
-  </ion-button>
-
-  <ion-button
-    class="ion-margin" 
-    expand="block"
-    appGesture
-    [gestureOpts]="[{name: 'doubleTap'}]"
-    (doubleTap)="onDoubleTap($event)">
-    DOUBLE TAP GESTURE
-  </ion-button>
-
-  <ion-button
-    class="ion-margin" 
-    expand="block"
-    appGesture
-    [gestureOpts]="[{name: 'press'}]"
-    (press)="onPress($event)">
-    LONG PRESS GESTURE
-  </ion-button>
-
-  <ion-button
-    class="ion-margin" 
-    expand="block"
-    appGesture
-    [gestureOpts]="[{name: 'swipe'}]"
-    (swipe)="onSwipe($event)">
-    SWIPE GESTURE
-  </ion-button> -->
-
-  <!-- <ion-button
-    class="ion-margin" 
-    expand="block"
-    appTap
-    (tap)="onTap($event)">
-    TAP GESTURE
-  </ion-button> -->
-
-  <!-- <ion-button
-    class="ion-margin" 
-    expand="block"
-    appTap
-    (doubleTap)="onDoubleTap($event)">
-    DOUBLE TAP GESTURE
-  </ion-button> -->
-
-  <!-- <ion-button
-    class="ion-margin" 
-    expand="block"
-    appPress
-    (press)="onPress($event)">
-    LONG PRESS GESTURE
-  </ion-button> -->
-
-  <!-- <ion-button
-    class="ion-margin" 
-    expand="block"
-    appSwipe
-    (swipe)="onSwipe($event)">
-    SWIPE GESTURE
-  </ion-button> -->
 
     <ion-fab class=".ion-fab-2" vertical="bottom" horizontal="center" slot="fixed">
       <ion-fab-button (click)="addProduct()" >
@@ -258,10 +92,6 @@
       </ion-fab-button>
     </ion-fab>  
 
-    <!-- <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
-      <ion-infinite-scroll-content></ion-infinite-scroll-content>
-    </ion-infinite-scroll> -->
-<!-- <ion-button (click)="deletAllMembers()"> Delet All Members</ion-button> -->
 
 </ion-content>
 
